test/fail/ac/principalundefined.app
//entity does not exist

application test

define page root() {
}

section principal

  principal is User with credentials name
